# masters-thesis-2

./: .gitignore  README.md  intruct.md  pyproject.toml
.cache/yfinance/: cookies.db  tkr-tz.db
configs/: experiment.yaml  experiment_smoke.yaml
plots_and_visualizations/_cache/: robust_tda_features.csv
results_smoke/: experiment_1_baseline.csv  experiment_2_multidimensionality.csv  experiment_3_robustness.csv  experiment_4_optimization.csv  experiment_5_shap_importance.csv  training_curves.json
scripts/: generate_visualizations.py  run_experiments.sh  run_visualizations.sh
src/tda_forecasting/: __init__.py  cli.py  config.py  data.py  experiments.py  metrics.py  plots.py  tda_features.py  visualization.py
src/tda_forecasting/models/: lstm.py  tree.py
src/tda_forecasting_thesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
